// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render breadcrumbs with one element 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationHelmet
    title="My Project"
  />
  <QualifierIcon
    className="spacer-right"
    key="qualifier-my-project"
    qualifier="TRK"
  />
  <Link
    className="link-base-color link-no-underline"
    key="name-my-project"
    onlyActiveOnIndex={false}
    style={Object {}}
    title="My Project"
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "branch": undefined,
          "id": "my-project",
        },
      }
    }
  >
    My Project
  </Link>
</header>
`;

exports[`should render organization 1`] = `
<header
  className="navbar-context-header"
>
  <OrganizationHelmet
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
    title="My Project"
  />
  <OrganizationAvatar
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
  />
  <OrganizationLink
    className="link-base-color link-no-underline spacer-left"
    organization={
      Object {
        "key": "foo",
        "name": "The Foo Organization",
        "projectVisibility": "public",
      }
    }
  >
    The Foo Organization
  </OrganizationLink>
  <span
    className="slash-separator"
  />
  <QualifierIcon
    className="spacer-right"
    key="qualifier-my-project"
    qualifier="TRK"
  />
  <Link
    className="link-base-color link-no-underline"
    key="name-my-project"
    onlyActiveOnIndex={false}
    style={Object {}}
    title="My Project"
    to={
      Object {
        "pathname": "/dashboard",
        "query": Object {
          "branch": undefined,
          "id": "my-project",
        },
      }
    }
  >
    My Project
  </Link>
</header>
`;
